# itexa

./: Readme.md
ai/: adam-optimalizator.md  embeddings.md  llm-modely.md  llm-trendy.md  llm-trening.md  prehlad-predmetu.md  transformer-siete.md  umela-inteligencia-prehlad.md  vyvojove-prostredie.md
ai/zadania/: RAG_Fine_tunning.md  rozpoznavanie-obrazkov.md
backend/: main.py  restapi_server.py  websocket_server.py
demo/backend/: .flake8  pyproject.toml  simulation.py  tank.service
demo/example/: websocket_server.py
demo/simulator/: index.html
frontend/: index.html
luajit-sample/: CMakeLists.txt  CMakeSettings.json  README.md
luajit-sample/include/: Account.h  HostFFI.h  Inventory.h  InventoryFFI.h  InventoryLua.h  World.h
luajit-sample/scripts/: boot.lua  host_ffi.lua  inv_ffi.lua  luapanda_ffi_socket.lua  mod_a.lua  mod_b.lua
luajit-sample/src/: Account.cpp  HostFFI.cpp  Inventory.cpp  InventoryFFI.cpp  InventoryLua.cpp  World.cpp  main.cpp
virtualBox/: README.md  create-vm.sh  provision-root.sh  provision-user.sh
zadania/: krizovatka.md  kyvadlo.md  pruzina.md  sikmy_vrh.md
